# ika-pre-alpha

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  justfile
chains/solana/: package.json
chains/solana/clients/rust/: Cargo.toml
chains/solana/clients/rust/src/: lib.rs
chains/solana/clients/typescript/: package.json
chains/solana/clients/typescript/src/: bcs-types.ts  grpc-web.ts  grpc.ts  index.ts
chains/solana/examples/_shared/: helpers.ts  ika-setup.ts  package.json
chains/solana/examples/multisig/anchor/: Cargo.toml
chains/solana/examples/multisig/anchor/src/: lib.rs
chains/solana/examples/multisig/e2e/: instructions.ts  main.ts
chains/solana/examples/multisig/e2e-rust/: Cargo.toml
chains/solana/examples/multisig/e2e-rust/src/: main.rs
chains/solana/examples/multisig/native/: Cargo.toml
chains/solana/examples/multisig/native/src/: lib.rs
chains/solana/examples/multisig/native/tests/: mollusk.rs
chains/solana/examples/multisig/pinocchio/: Cargo.toml
chains/solana/examples/multisig/pinocchio/src/: lib.rs
chains/solana/examples/multisig/pinocchio/tests/: mollusk.rs
chains/solana/examples/multisig/quasar/: Cargo.toml  Quasar.toml
chains/solana/examples/multisig/quasar/src/: lib.rs
chains/solana/examples/multisig/react/: .gitignore  index.html  package.json  tsconfig.app.json  vite.config.ts
chains/solana/examples/multisig/react/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
chains/solana/examples/multisig/react/src/lib/: program.ts
chains/solana/examples/protocols-e2e/: Cargo.toml
chains/solana/examples/protocols-e2e/src/: main.rs
chains/solana/examples/voting/anchor/: Cargo.toml
chains/solana/examples/voting/anchor/src/: lib.rs
chains/solana/examples/voting/anchor/tests/: mollusk.rs
chains/solana/examples/voting/e2e/: instructions.ts  main.ts
chains/solana/examples/voting/e2e-rust/: Cargo.toml
chains/solana/examples/voting/e2e-rust/src/: main.rs
chains/solana/examples/voting/native/: Cargo.toml
chains/solana/examples/voting/native/src/: lib.rs
chains/solana/examples/voting/native/tests/: litesvm.rs  mollusk.rs
chains/solana/examples/voting/pinocchio/: Cargo.toml
chains/solana/examples/voting/pinocchio/src/: lib.rs
chains/solana/examples/voting/pinocchio/tests/: litesvm.rs  mollusk.rs
chains/solana/examples/voting/quasar/: Cargo.toml  Quasar.toml
chains/solana/examples/voting/quasar/src/: lib.rs
chains/solana/idl/: README.md
chains/solana/program-sdk/anchor/: Cargo.toml
chains/solana/program-sdk/anchor/src/: lib.rs
chains/solana/program-sdk/native/: Cargo.toml
chains/solana/program-sdk/native/src/: lib.rs
chains/solana/program-sdk/pinocchio/: Cargo.toml
chains/solana/program-sdk/pinocchio/src/: cpi.rs  lib.rs
chains/solana/program-sdk/quasar/: Cargo.toml
chains/solana/program-sdk/quasar/src/: cpi.rs  lib.rs
chains/solana/scripts/: generate-clients.ts  generate-idl.sh
chains/solana/scripts/lib/: ika-system-codama-builder.ts
chains/solana/sdk/types/: Cargo.toml
chains/solana/sdk/types/src/: accounts.rs  lib.rs  pda.rs
crates/ika-dwallet-types/: Cargo.toml
crates/ika-dwallet-types/src/: lib.rs
crates/ika-grpc/: Cargo.toml  build.rs
crates/ika-grpc/src/: lib.rs
docs/: book.toml
docs/src/: SUMMARY.md  introduction.md
docs/src/examples/: overview.md
docs/src/examples/multisig/: 01-overview.md  02-program.md  03-testing.md  04-e2e.md
docs/src/examples/voting/: 01-overview.md  02-program.md  03-testing.md  04-e2e.md
docs/src/frameworks/: anchor.md  native.md  pinocchio.md  quasar.md  typescript.md
docs/src/getting-started/: concepts.md  installation.md  quick-start.md
docs/src/grpc/: request-types.md  response-types.md  submit-transaction.md
docs/src/on-chain/: cpi-framework.md  dwallets.md  gas-deposits.md  message-approval.md
docs/src/reference/: accounts.md  events.md  instructions.md
docs/src/testing/: e2e.md  litesvm.md  mollusk.md
docs/src/tutorial/: approve-messages.md  cast-votes.md  create-program.md  overview.md  testing.md  verify-signature.md
keys/: README.md
proto/: ika_dwallet.proto
