[workspace]
resolver = "2"
exclude = [
    "chains/solana/program-sdk/quasar",
    "chains/solana/examples/voting/quasar",
    "chains/solana/examples/multisig/quasar",
]
members = [
    "crates/ika-grpc",
    "crates/ika-dwallet-types",
    "chains/solana/program-sdk/pinocchio",
    "chains/solana/program-sdk/anchor",
    "chains/solana/program-sdk/native",
    "chains/solana/sdk/types",
    "chains/solana/clients/rust",
    "chains/solana/examples/voting/pinocchio",
    "chains/solana/examples/voting/native",
    "chains/solana/examples/voting/anchor",
    "chains/solana/examples/multisig/pinocchio",
    "chains/solana/examples/multisig/anchor",
    "chains/solana/examples/multisig/native",
]

[workspace.package]
version = "0.1.0"
authors = ["dWallet Labs"]
license = "BSD-3-Clause-Clear"
publish = false
edition = "2024"

[workspace.dependencies]
# Internal
ika-dwallet-pinocchio = { path = "chains/solana/program-sdk/pinocchio" }
ika-dwallet-anchor = { path = "chains/solana/program-sdk/anchor" }
ika-dwallet-native = { path = "chains/solana/program-sdk/native" }
ika-dwallet-quasar = { path = "chains/solana/program-sdk/quasar" }
ika-system-types = { path = "chains/solana/sdk/types" }
ika-dwallet-types = { path = "crates/ika-dwallet-types" }

# Pinocchio
pinocchio = { version = "^0.10", features = ["cpi", "copy"] }
pinocchio-system = "^0.5"

# Quasar
quasar-lang = { git = "https://github.com/blueshift-gg/quasar", branch = "master" }
solana-instruction-view = "2"

# Anchor
anchor-lang = "1"

# Solana
solana-pubkey = "^4.0"
solana-address = { version = "^2.4", features = ["curve25519"] }
solana-program = "2.2"

# Serialization
serde = { version = "1", features = ["derive"] }
bcs = "0.1"
borsh = { version = "^1.6", features = ["derive"] }
solana-instruction = "^3.2"
num-derive = "^0.4"
num-traits = "^0.2"

# gRPC
tonic = "0.14"
tonic-prost = "0.14"
prost = "0.14"

# Testing
mollusk-svm = { version = "^0.11", features = ["inner-instructions"] }
litesvm = "0.11"
solana-account = "^3.2"
solana-keypair = "^3.0"
solana-signer = "^3.0"
solana-transaction = { version = "^3.0", features = ["bincode"] }
solana-hash = "^3.0"

[workspace.lints.clippy]
arithmetic_side_effects = "deny"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
