[package]
name = "ika-example-multisig"
version.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
edition.workspace = true

[dependencies]
pinocchio = { workspace = true }
pinocchio-system = { workspace = true }
ika-dwallet-pinocchio = { workspace = true }

[dev-dependencies]
mollusk-svm = { workspace = true }
solana-account = { workspace = true }
solana-instruction = { workspace = true }
solana-pubkey = { workspace = true }
solana-keypair = { workspace = true }

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "lib"]
