[package]
name = "ika-example-voting-anchor"
version.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
edition.workspace = true

[dependencies]
anchor-lang = { workspace = true }
ika-dwallet-anchor = { workspace = true }

[dev-dependencies]
mollusk-svm = { workspace = true }
solana-account = { workspace = true }
solana-instruction = { workspace = true }
solana-pubkey = { workspace = true }
solana-keypair = { workspace = true }

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]

[lints.clippy]
arithmetic_side_effects = "deny"

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(feature, values("custom-heap", "custom-panic", "anchor-debug", "no-log-ix-name"))',
]

[lib]
crate-type = ["cdylib", "lib"]
