[package]
name = "e2e-voting"
version = "0.1.0"
edition = "2024"
license = "BSD-3-Clause-Clear"
publish = false

[[bin]]
name = "e2e-voting"
path = "src/main.rs"

[workspace]

[dependencies]
solana-sdk = "2.2"
solana-rpc-client = "2.2"
tokio = { version = "1", features = ["full"] }
bs58 = "0.5"
hex = "0.4"
ed25519-dalek = "2"

# gRPC
tonic = { version = "0.14", features = ["tls-native-roots"] }
prost = "0.14"
ika-grpc = { path = "../../../../../crates/ika-grpc" }

# BCS serialization
bcs = "0.1"
serde = { version = "1", features = ["derive"] }
ika-dwallet-types = { path = "../../../../../crates/ika-dwallet-types" }
