[package]
name = "ika-example-voting-pinocchio"
version.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
edition.workspace = true

[dependencies]
pinocchio = { workspace = true }
pinocchio-system = { workspace = true }
ika-dwallet-pinocchio = { workspace = true }

[dev-dependencies]
mollusk-svm = { workspace = true }
litesvm = { workspace = true }
solana-account = { workspace = true }
solana-address = { workspace = true }
solana-instruction = { workspace = true }
solana-pubkey = { workspace = true }
solana-keypair = { workspace = true }
solana-signer = { workspace = true }
solana-transaction = { workspace = true }
solana-hash = { workspace = true }

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "lib"]
